--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
         \n\nIf you like this App, rate it on Google Play (scan the QR-Code or visit https://goo.gl/Dradno).
         In case you are missing some features or found a Bug, let me know.
         To improve the content of the Videos, contact or join the Chaos Computer Club.
+        \n\n For the list of Libraries, please see below.
     </string>
+    <string name="libraries">Libraries</string>
+
     <string name="implement_me_toast">Uups, this feature is still missing - check back later</string>
 </resources>
