--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="voctocat">Voctocat</string>
     <string name="voctocat_toast">This little fella is designed by Sebastian Morr and distributed under CC BY-NC-SA 4.0 License
         (https://morr.cc/voctocat/)</string>
+    <string name="search_result_header">%1$s videos found for \"%2$s\"</string>
 
     <string name="implement_me_toast">Uups, this feature is still missing - check back later</string>
 </resources>
