improves Fragment parameter handling for events + minor fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,5 @@
 
     <string name="implement_me_toast">Uups, this feature is still missing - check back later</string>
 
-    <string name="events_view_search_result_header">Search results for %1$s</string>
+    <string name="events_view_search_result_header">Search results for \"%1$s\"</string>
 </resources>
