--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,7 +29,7 @@
     <string name="search_result_header">%1$s Videos gefunden für \"%2$s\"</string>
 
     <string name="implement_me_toast">Uups, under construction. Beim nächsten Mal ist hier aber bestimmt etwas.</string>
-    <string name="events_view_search_result_header">Suchergebnisse für %1$s</string>
+    <string name="events_view_search_result_header">Suchergebnisse für \"%1$s\"</string>
 
 
 </resources>
