--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,26 @@
     <string name="search_result_header">%1$s videos found for \"%2$s\"</string>
     <string name="events_view_search_result_header">Search results for \"%1$s\"</string>
 
+    <!-- ConferenceGroups -->
+    <string name="cg_congress">Congress</string>
+    <string name="cg_camp">Camp</string>
+    <string name="cg_cryptocon">CryptoCon</string>
+    <string name="cg_datenspuren">Datenspuren</string>
+    <string name="cg_denog">DENOG</string>
+    <string name="cg_eh">Easterhegg</string>
+    <string name="cg_fiffkon">FIfFKon</string>
+    <string name="cg_froscon">FrOSCon</string>
+    <string name="cg_gpn">GPN</string>
+    <string name="cg_hackover">Hackover</string>
+    <string name="cg_jugendhackt">Jugend Hackt</string>
+    <string name="cg_mrmcd">MRMCD</string>
+    <string name="cg_netzpolitik">Netzpolitik</string>
+    <string name="cg_osc">openSUSE</string>
+    <string name="cg_sigint">sigint</string>
+    <string name="cg_vcfb">Vintage Computing Festival Berlin</string>
+    <string name="cg_other_conferences">More Conferences</string>
+    <string name="cg_other">Even More…</string>
+
     <string name="implement_me_toast">Uups, this feature is still missing - check back later</string>
 
 </resources>
