--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,12 +12,12 @@
     <string name="header_speaker">Speaker</string>
     <string name="header_related">Related Videos</string>
     <string name="about_description">\ncccTV is an Open Source project developed by Stefan Medack.
-        All sources are available under the Apache License 2.0 on https://github.com/stefanmedack/cccTV.
+        All sources are available under the Apache License 2.0 on github.com/stefanmedack/cccTV.
         \n\nThe video material is kindly provided by media.ccc.de
         \n\nSpecial thanks to Chaos Computer Club e.V. (CCC) for hosting the content and
         everybody involved in its production,
         as well as to everybody participating in the videos and sharing their knowledge.
-        \n\nIf you like this App, rate it on Google Play (scan the QR-Code or visit https://goo.gl/Dradno).
+        \n\nIf you like this App, please give it a rating.
         In case you are missing some features or found a Bug, let me know.
         To improve the content of the Videos, contact or join the Chaos Computer Club e.V.
         \n\nFor the list of Open Source Libraries and Licenses, please have a look below.
