--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="main_more_header">More</string>
     <string name="main_about_app">About cccTV</string>
     <string name="action_watch">Watch</string>
-    <string name="action_bookmark">Bookmark</string>
+    <string name="action_add_bookmark">Add to Watchlist</string>
+    <string name="action_remove_bookmark">Remove from Watchlist</string>
     <string name="action_show_speaker">Speaker</string>
     <string name="action_show_related">Related</string>
     <string name="header_speaker">Speaker</string>
