--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,8 +6,9 @@
     <string name="main_more_header">Weiteres</string>
     <string name="main_about_app">Über cccTV</string>
     <string name="action_watch">Ansehen</string>
-    <string name="action_add_bookmark">Zur Watchlist hinzufügen</string>
-    <string name="action_remove_bookmark">Von Watchlist entfernen</string>
+    <string name="action_add_bookmark">Hinzufügen zur</string>
+    <string name="action_remove_bookmark">Entfernen von der</string>
+    <string name="action_bookmark_second_line">Watchlist</string>
     <string name="action_show_speaker">Vortragende</string>
     <string name="action_show_related">Ähnliches</string>
     <string name="header_speaker">Vortragende</string>
