extracts MainFragmentFactory from MainFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
 
     <string name="app_name">cccTV</string>
-    <string name="main_streams_header">Live Streaming</string>
-    <string name="main_videos_header">Library</string>
+    <string name="main_home_header">Home</string>
+    <string name="main_streams_header">Live Stream</string>
+    <string name="main_library_header">Library</string>
     <string name="main_more_header">More</string>
     <string name="main_about_app">About cccTV</string>
     <string name="action_watch">Watch</string>
