--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,8 +1,9 @@
 <resources>
 
     <string name="app_name">cccTV</string>
+    <string name="main_home_header">Home</string>
     <string name="main_streams_header">Gerade Live</string>
-    <string name="main_videos_header">Mediathek</string>
+    <string name="main_library_header">Mediathek</string>
     <string name="main_more_header">Weiteres</string>
     <string name="main_about_app">Über cccTV</string>
     <string name="action_watch">Ansehen</string>
