--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,11 +1,17 @@
 <resources>
 
     <string name="app_name">cccTV</string>
+
     <string name="main_home_header">Home</string>
     <string name="main_streams_header">Gerade Live</string>
     <string name="main_library_header">Mediathek</string>
     <string name="main_more_header">Weiteres</string>
     <string name="main_about_app">Über cccTV</string>
+
+    <string name="home_header_bookmarked">Auf Deiner Watchlist</string>
+    <string name="home_header_recent">Neueste Videos</string>
+    <string name="home_header_popular">Populärste Videos</string>
+
     <string name="action_watch">Ansehen</string>
     <string name="action_add_bookmark">Hinzufügen zur</string>
     <string name="action_remove_bookmark">Entfernen von der</string>
@@ -14,6 +20,7 @@
     <string name="action_show_related">Ähnliches</string>
     <string name="header_speaker">Vortragende</string>
     <string name="header_related">Ähnliche Videos</string>
+
     <string name="about_description">\ncccTV ist ein Open Source Projekt entwickelt von Stefan Medack.
         Sämtlicher Source Code ist unter der Apache License 2.0 auf github.com/stefanmedack/cccTV zu finden.
         \n\nDas Video Material wird freundlicherweise von media.ccc.de bereitgestellt.
@@ -29,6 +36,7 @@
     <string name="voctocat">Voctocat</string>
     <string name="voctocat_toast">Dieses kleine Kerlchen ist von Sebastian Morr entworfen worden
         und verfügbar unter der CC BY-NC-SA 4.0 Lizenz (https://morr.cc/voctocat/)</string>
+
     <string name="search_result_header">%1$s Videos gefunden für \"%2$s\"</string>
     <string name="events_view_search_result_header">Suchergebnisse für \"%1$s\"</string>
 
