--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="home_header_popular">Most Popular Videos</string>
 
     <string name="action_watch">Watch</string>
+    <string name="action_restart">Play from beginning</string>
     <string name="action_add_bookmark">Add to</string>
     <string name="action_remove_bookmark">Remove from</string>
     <string name="action_bookmark_second_line">Watchlist</string>
@@ -23,6 +24,7 @@
     <string name="action_show_related">Related</string>
     <string name="header_speaker">Speaker</string>
     <string name="header_related">Related Videos</string>
+    <string name="playback_resumed_toast">Video playback has been picked up from last time</string>
 
     <string name="about_description">\ncccTV is an Open Source project developed by Stefan Medack.
         All sources are available under the Apache License 2.0 on github.com/stefanmedack/cccTV.
