updates texts for toast message when resuming a video

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -24,7 +24,7 @@
     <string name="action_show_related">Ähnliches</string>
     <string name="header_speaker">Vortragende</string>
     <string name="header_related">Ähnliche Videos</string>
-    <string name="playback_resumed_toast">Das Video wird vom letzten Mal fortgesetzt</string>
+    <string name="playback_resumed_toast">Video wird vom letzten Mal fortgesetzt</string>
 
     <string name="about_description">\ncccTV ist ein Open Source Projekt entwickelt von Stefan Medack.
         Sämtlicher Source Code ist unter der Apache License 2.0 auf github.com/stefanmedack/cccTV zu finden.
