--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="action_show_related">Related</string>
     <string name="header_speaker">Speaker</string>
     <string name="header_related">Related Videos</string>
-    <string name="playback_resumed_toast">Video playback has been picked up from last time</string>
+    <string name="playback_resumed_toast">Picked up playback from last time</string>
 
     <string name="about_description">\ncccTV is an Open Source project developed by Stefan Medack.
         All sources are available under the Apache License 2.0 on github.com/stefanmedack/cccTV.
